client/css/_app.scss
@import 'lib/color-palette';

$seam-border-color: #E0E0E0;
$header-color: #aaa;
$primary-color-palette: $color-cyan;
$sidenav-width: 250px;

body {
  font-size: 15px;
}

code, pre {
  font-family: Monaco, Menlo, 'Ubuntu Mono', Consolas, source-code-pro, monospace;
  font-size: 12px;
}

@mixin z1 {
  box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.26);
}


@mixin z2 {
  box-shadow: 0px 8px 17px rgba(0, 0, 0, 0.2);
}


a, .link-button {
  color: map-get($primary-color-palette, '400');
  text-decoration: none;
  font-weight: 400;

  &:focus {
    background-color: #EEE !important;
  }
}

.link-button {
  display: inline;
  background: none;
  border: none;
  padding: 0;
  margin: 0;
  font-weight: normal;
}


md-sidenav {
  background-color: #FAFAFA;

  md-content {
    background-color: transparent !important;
  }
}


.md-sidenav-left {
  a, .section, button {
    text-decoration: none;
    font-size: 13px;
    line-height: 44px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    background: transparent;
    color: inherit;
    border: none;
    margin: 0;
    padding: 0 24px;
    position: relative;
    font-weight: bold;

    &.indent {
      padding-left: 48px;
    }
  }

  a {
    position: relative;
    display: block;
    color: inherit;

    &.active {
      color: map-get($primary-color-palette, '400');
    }
  }

  .section {
    color: $header-color;
  }

  #logo {
    font-size: 20px;
    line-height: 64px;
    border-bottom: 1px solid $seam-border-color;
    margin-bottom: 12px;
    font-weight: normal;
    padding-left: 65px;
    color: map-get($primary-color-palette, '400') !important;

    md-icon {
      position: absolute;
      top: 15px;
      left: 24px;
      width: 33px;
      height: 33px;
      opacity: 0.8;
    }

    .beta {
      font-size: 10px;
      color: #46B946;
      margin-left: 4px;
    }
  }

  .new-calculator-icon {
    position: absolute;
    top: 10px;
    left: 19px;
  }

  .new-calculator-label {
    margin-left: 21px;
  }
}


#app-title {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}


.rotatable-container {
  display: inline-block;
  vertical-align: middle;
  position: relative;
  width: 24px;
  height: 24px;
}


.rotatable-container md-icon {
  position: absolute;
  top: 12px;
  left: 12px;
  margin-left: -12px;
  margin-top: -12px;
}


.rotating md-icon {
  -webkit-animation:spin 4s linear infinite;
  -moz-animation:spin 4s linear infinite;
  animation:spin 4s linear infinite;
}
@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }


#inputs, #outputs, #cheat-sheet {
  background-color: #fff;

  .frame-title {
    color: $header-color;
    font-size: 20px;
    font-weight: bold;
    margin: 22px 0px;
  }

  .button-row {
    margin-left: -6px;
    margin-right: -6px;
  }
}


#inputs, #outputs, #cheat-sheet, #share {
  padding: 0px 20px;
}


.input-row, .output-row, .button-row {
  margin-top: 30px;
  margin-bottom: 30px;

  .comment {
    font-size: 13px;
    margin-top: 10px;
    color: #AAA;
  }
}


.config-icons {
  display: inline-block;
  white-space: nowrap;

  .md-button {
    margin: -12px 0;
    width: 36px;
    height: 36px;
    line-height: 36px;

    md-icon {
      vertical-align: top;
      color: map-get($primary-color-palette, '400');
      margin-top: 6px;
    }
  }
}


.title-row {
  .title {
    display: inline-block;
    margin-right: 16px;
    color: $header-color;
    font-weight: bold;
    font-size: 13px;
  }
}


.input-row {
  md-input-container {
    padding: 4px 2px 12px;
  }

  md-input-container:first-child {
    padding-left: 0;
  }

  md-input-container:last-child {
    padding-right: 0;
  }

  md-slider {
    margin-left: 0;
    margin-right: 20px;
  }

  md-radio-group {
    margin-bottom: -15px;
  }

  md-radio-button, .md-switch-thumb {
    margin: 10px;
  }
}


.hidden-indicator {
  display: none;
  background-color: rgba(43, 175, 43, 0.87);
  border-radius: 20px;
  font-size: 13px;
  color: #FFF;
  padding: 1px 6px;
  margin: -1px 10px;
}

.edit-mode .hidden .hidden-indicator {
  display: inline-block;
}


.hidden {
  display: none;
}

.edit-mode .hidden {
  display: block;
}


.checkbox-input-container {
  md-checkbox {
    display: inline-block;
    margin: 0 15px 0 0;
  }
}


/* Text styled to align with inputs that are on the same line */
.form-text {
  line-height: 26px;
  padding: 6px 2px 14px;
}


.form-text:first-child {
  padding-left: 0;
}

.form-text:last-child {
  padding-right: 0;
}


jscalc-date-input {
  .content {
    height: 37px;
  }


  .footer {
    margin-top: 5px;
    margin-bottom: -5px;

    md-button {
      margin-right: -6px;
    }
  }

  .md-button {
    font-size: 12px;
    margin-left: -6px;
    margin-top: -4px;
  }
}


.list-input-container {
  .item {
    margin-top: 24px;
  }

  & > .item > .content-row {
    margin-left: 20px;
  }

  .item-prototype {
    background-color: #F4F4F4;
    padding: 15px 20px;
    margin: 0 -20px;

    .button-row {
      margin-bottom: 0;
    }
  }
}


.debug-comment {
  font-size: 13px;
  color: #AAA;
  margin-top: -22px;
  margin-bottom: 30px;
}


.outputs-warning {
  display: inline-block;
  height: 48px;
  width: 48px;
  margin-right: 12px;
  color: #FFEB3B;
}


.value-output-container {
  .content-row {
    margin-top: 12px;
  }
}


.table-output-container {
  table {
    width: 100%;
    border-spacing: 0;
    border-collapse: collapse;
    margin-top: 10px;
  }

  th, td {
    text-align: left;
    padding: 8px;
    line-height: 1.42857143;
    vertical-align: top;
    border-top: 1px solid #DDD;
  }

  th {
    color: $header-color;
    font-size: 13px;
    vertical-align: bottom;
    border-bottom: 2px solid map-get($primary-color-palette, '400');
    border-top: 0;
  }
}

#script {
  position: relative;
}


#cheat-sheet {
  display: none;
  font-size: 13px;

  p {
    line-height: 22px;
  }

  pre {
    margin-left: 20px;
  }
}


.ace_editor {
  position: absolute;
  top: 0;
  left: 0;
  right: -0.5px;
  bottom: 0;
}


#share {
  text-align: center;

  a {
    font-size: 24px;
    word-wrap: break-word;
  }
}


.settings {
  .warning {
    color: map-get($color-red, '500');
    font-size: 14px;
  }

  .choice, .column {
    margin-bottom: 40px;
  }


  .button-row {
    margin-left: -6px;
    margin-right: -6px;
  }

  md-checkbox {
    margin-left: 0;
  }

  .comment {
    margin-top: -7px;
    font-size: 12px;
    padding-bottom: 20px;
    margin-left: 28px;
  }
}


md-bottom-sheet {
  .md-button {
    overflow: visible;
  }

  .md-grid-text {
    width: 90px !important;
  }

  md-icon {
    height: 48px;
    width: 48px;
    opacity: 0.54;
    color: black;
  }
}


#auth-dialog {
  md-content {
    width: 250px;
    background: transparent;
    padding: 12px;
  }

  .text-rows {
    margin-top: 34px;
  }

  .text-row {
    margin-top: 12px;
    font-size: 14px;
  }

  .row-error {
    color: map-get($color-red, '500')
  }

  md-progress-circular {
    margin-right: -16px;
  }
}


.account-settings-content {
  md-input-container {
    max-width: 400px;
    padding-left: 0;
  }

  .md-button {
    margin-left: 0;
  }
}


md-progress-circular {
  display: inline-block;
  -webkit-transform: scale(0.5) !important;
  transform: scale(0.5) !important;
  margin-top: -12px;
  margin-bottom: -11px;
}


.md-input {
  min-height: 26px;
}


.md-toolbar-tools .md-menu {
  padding: 0;
}


/* Actually the toolbar doesn't have 'flex' on it, but in Chrome it still
shrinks (in Safari doesn't shrink). */
md-toolbar {
  flex-shrink: 0;
}


/* See https://github.com/angular/material/issues/4381 */
.md-toolbar-tools h1, .md-toolbar-tools h2, .md-toolbar-tools h3 {
  font-weight: 500;
}


.welcome {
  .centered {
    margin-left: auto;
    margin-right: auto;
    max-width: 800px;
  }


  .title {
    color: map-get($primary-color-palette, '400');
    margin: 120px 0 30px;


    md-icon {
      height: 75px;
      width: 75px;
      vertical-align: top;
      margin-right: 11px;
      margin-top: -8px;
      margin-bottom: -8px;
    }


    .name {
      display: inline-block;
      font-size: 45px;
      line-height: 60px;
    }


    .beta {
      display: inline-block;
      font-size: 15px;
      color: #46B946;
      margin-left: 8px;
    }
  }


  .description {
    font-size: 24px;
    margin: 48px 0 20px;
  }


  .section {
    margin-right: -40px;
  }


  .item {
    margin: 20px 0;
    margin-right: 40px;
  }


  .heading {
    color: #26C6DA;
    font-size: 20px;
    font-weight: bold;
    margin-bottom: 9px;
  }


  .footer{
    margin-top: 60px;


    p {
      margin: 5px 0;
    }

    .social-icon {
      margin-right: 10px;
      margin-bottom: 5px;
      display: inline-block;

      md-icon {
        width: 36px;
        height: 36px;
      }
    }
  }

  .demo-container {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px;
    margin-bottom: 20px;
    height: 0;
    overflow: hidden;

    iframe {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
    }
  }
}


@media (min-width: 960px) {
  #toolbar-source {
    md-tabs {
      margin-left: 37px;
    }

    md-tab {
      max-width: 106px;

      md-tab-label {
        font-size: 15px;
      }
    }
  }


  /* Because of the border */
  #inputs {
    padding-right: 19px;
  }


  #inputs, #outputs, #cheat-sheet {
    overflow: auto;
    -webkit-overflow-scrolling: touch;
  }


  #cheat-sheet {
    display: block;
    border-left: 1px solid $seam-border-color;
  }


  #inputs {
    border-right: 1px solid $seam-border-color;
  }

  .welcome {
    .title {
      md-icon {
        height: 150px;
        width: 150px;
        margin-top: -15px;
        margin-bottom: -15px;
        margin-right: 22px;
      }


      .name {
        font-size: 90px;
        line-height: 120px;
      }


      .beta {
        font-size: 30px;
        margin-left: 15px;
      }
    }
  }
}

